fix wrong height section slopes

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -394,6 +394,11 @@ main {
     top: -48px;
     height: 48px;
   }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
